# algos

./: LICENSE  README.md  pyproject.toml
src/algos/: mt.py
tests/mt/: test_mt.py
